--- a/reminderservice/src/main/resources/application.yml
+++ b/reminderservice/src/main/resources/application.yml
@@ -1,9 +1,5 @@
 spring:
   data:
     mongodb:
-      username: root
-      password: root
-      database: reminder_service
-      port: 27017
-      host : 127.0.0.1
-      authentication-database: reminder_service
+      authentication-database: admin
+      uri: mongodb://root:root@localhost:27017/reminder_service
